syntax = "proto3";

package RSFSProto;

// Define the message types
message TokenAndMetadataRequest {
  string requestType = 1;
  string filePath = 2;
}

message TokenAndMetadataResponse {
  bool isHealthy = 1;
  string token = 2;
  repeated string ips = 3;
  Metadata metadata = 4;
}

message Metadata {
    int32 fileSize = 1;
    map<string, List> filePathToBlockNumbers = 2;
}

message List {
    repeated int32 numbers = 1;
}

service ClientMasterService {
    rpc RetrieveTokenAndMetadata(TokenAndMetadataRequest) returns (TokenAndMetadataResponse);
}

// message ReadRequest() {
//     string filePath = 1;

// }

// message WriteRequest() {

// }

service ClientStorageClusterService {
    // rpc AddFileMetadata(Request) returns()
}